Minor change to sample file

--- a/baseinit.php.sample
+++ b/baseinit.php.sample
@@ -24,8 +24,12 @@ set_include_path(
 require_once('Kutu/Core/Util.php');
 $KUTUUTIL = new Kutu_Core_Util();
 
-//should be CHANGE when deployed to production or other server
-define('KUTU_ROOT_URL', $KUTUUTIL->getRootUrl()."/kutump");
+$aPath = pathinfo(ROOT_PATH);
+$kutuBaseName = $aPath['basename'];
+if(!empty($kutuBaseName))
+	$kutuBaseName = '/'.$kutuBaseName;
+//define('KUTU_ROOT_URL', $KUTUUTIL->getRootUrl()."/kutump");
+define('KUTU_ROOT_URL', $KUTUUTIL->getRootUrl().$kutuBaseName);
 
 define( 'KUTU_MODULE_RESOURCES_URL' , KUTU_ROOT_URL.'/common/modules' ) ;
 
