Added new application resource MAIL. also updated: 1. BPM User to use the new mail resource. 2. update application.ini.sample to include mail resource.

--- a/application/configs/application.ini.sample
+++ b/application/configs/application.ini.sample
@@ -143,6 +143,10 @@ pluginPaths.Kutu_Application_Resource = "Kutu/Application/Resource"
 	resources.indexing.extractor.pdf = /opt/local/bin/pdftotext
 	resources.indexing.extractor.word = /opt/local/bin/antiword
 	
+; KUTU MAIL
+	resources.mail[] =
+	
+; KUTU JCART
 	;resources.jcart1.message = "global" 
 
 ; LAYOUT	 
